<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ersteapp.dietzm.de.reflexgame.StartActivity">

    <TextView
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_gamename"

        android:gravity="center"
        android:layout_weight="1"
        />

    <!-- Spacer element that uses the available space and expands -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_playername"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/inp_playername"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_name"
        />

    <!-- Spacer element that uses the available space and expands -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_level"
        android:gravity="center"

        />

    <SeekBar
        android:id="@+id/inp_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:max="2"
        />

    <!-- Spacer element that uses the available space and expands -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="2"
        android:visibility="visible" />


    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_readytostart"

        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        android:onClick="readyToStart"/>

    <!-- Spacer element that uses the available space and expands -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:visibility="visible" />


</LinearLayout>